
2018-03-26  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* run_prog_manual.sh.in: add option to run manual tests in
	  plain terminal environments using the screen window manager;
	  added timeout (currently 60 seconds for each test)

2018-03-25  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* testsuite_manual.at: source for new manual test suite
	* testsuite.src/run_manual_screen.at: adjusted version of screen
	  test suite written by Edward Hart (Patch #26)
	* Makefile.am (checkmanual): new target for running manual tests
	* Makefile.am, atlocal.in: adjustments for the new manual testsuite
	* run_prog_manual.sh.in: template for test runner - we use a template
	  here as the user may need to tweak this according to his system
	* testsuite.src/run_manual_screen.at: allow test cases to be directly
	  acknowledged by ENTER and mark as failed with any function key;
	  for failing BEEP tests: mention and check COB_BELL=FLASH

2018-02-16  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* testsuite.at, testsuite.src/run_reportwriter.at: activated and
	  tweaked RW run checks

2018-02-16  Dave Pitts <dpitts@cozx.com>

	* testsuite.src/listings.at: BUG #494 Added test case for embedded
	  quotes, eg. 'yyy-'hello.
	  Added test case for the report writer.

2017-11-11  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* testsuite.src/run_fundamental.at: added tests for DEBUG module

2017-11-06  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* testsuite.src/run_extensions.at, testsuite.src/run_fundamental.at:
	  moved debugging line checks from to run_fundamental.at
	* testsuite.src/run_fundamental.at: added first checks for COB_SET_DEBUG

2017-11-05  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* listings-sed.sh: use `` instead of $() - see Bug #437

2017-11-02  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* testsuite.src/configuration.at, testsuite.src/used_binaries.at: added